--- a/chant/index.html
+++ b/chant/index.html
@@ -10,6 +10,7 @@
 	#currentWordButton { position: absolute;
     top: 80%;
 		left: 100px;
+		min-width: 100px;
     }
 	/* BASIC RESET */
 	ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,body,html,p,blockquote,fieldset,input{margin:0; padding:0;}
