--- a/chant/index.html
+++ b/chant/index.html
@@ -3,8 +3,8 @@
 	button { font-size: 20pt; }
 	#currentWordButton { position: absolute;
     top: 80%;
-		left: 100px;
-		min-width: 100px;
+		left: 50px;
+		min-width: 200px;
     }
 	/* BASIC RESET */
 	ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,body,html,p,blockquote,fieldset,input{margin:0; padding:0;}
@@ -96,24 +96,34 @@
 			var attachFastClick = Origami.fastclick;
 			attachFastClick(document.body);
 
+			function endChant()
+			{
+				$("#currentWordButton").hide().off().text("Next Chant").delay(500);
+				$("#currentWordButton").fadeIn(1300).click(function() {
+							location.reload();
+				});
+			}
+
 			//pick a random chant
 			// inherited from directory.js
 			var selectedChant = Directory[Math.floor(Math.random()*Directory.length)];
 
-			$.get("texts/"+selectedChant.id +".txt",function(data){
+			//$.get("texts/"+selectedChant.id +".txt",function(data){
+			$.get("texts/4.txt",function(data){
 				var chantLines = data.split("\n");
 				var currentLineNumber = 0;
 				var currentLineArray = chantLines[0].split(" ");
 				var currentWordNumber = 0;
 				$("#currentWordButton").click(function() {
-					$("#fill").append(currentLineArray[currentWordNumber++] + " ");
-					if(currentWordNumber >= currentLineArray.length) {
+					// END OF LINE CASE
+					//console.log(currentLineArray);
+					//console.log(currentLineNumber);
+					//console.log(currentWordNumber);
+					$("#fill").append(currentLineArray[currentWordNumber] + " ");
+					if(++currentWordNumber >= currentLineArray.length) {
 						if(++currentLineNumber >= chantLines.length) {
 							//it's at end of file
-							$("#currentWordButton").hide().delay(1200).text("Next Chant").show().fadeIn(300).off().click(function() {
-										location.reload();
-							});
-
+							return endChant();
 							// could do fun stuff here, like prompt to share (send link to same chant)
 							// (or share text of chant to social media)
 							// Or could show the options screen + next button + set repeat
@@ -123,9 +133,19 @@
 							//it's end of line, so add a <br> and reset
 							$("#fill").append("<br>");
 							currentLineArray = chantLines[currentLineNumber].split(" ");
+							// handle the case of an empty line
+							while(currentLineArray.length == 1 && (currentLineArray[0] == null || currentLineArray[0].length == 0)){
+								$("#fill").append("<br>");
+								if(typeof chantLines[++currentLineNumber] !== 'undefined') currentLineArray = chantLines[currentLineNumber].split(" ");
+								return endChant();
+
+								// WARNING -- won't work well if it ends on an empty line!
+								// for now, just avoid doing that in the text file
+							}
 							currentWordNumber = 0;
 						}
 					}
+					//console.log("fill button with "+currentLineArray[currentWordNumber]);
 					$("#currentWordButton").text(currentLineArray[currentWordNumber]);
 				});
 
