--- a/chant/index.html
+++ b/chant/index.html
@@ -8,15 +8,20 @@
 	}
 	#currentWordButton {
 		min-width: 200px;
+		margin-left: 60px;
   }
 	#fill{
 		padding:20px 30px;
+		color:white;
 	}
 	/* BASIC RESET */
 	ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,body,html,p,blockquote,fieldset,input{margin:0; padding:0;}
 
 	/* HTML ELEMENTS */
-	body { font: 14px "Lucida Grande","Lucida Sans Unicode",Helvetica,Arial,Verdana,sans-serif; padding-bottom:200px; }
+	body { font: 14px "Lucida Grande","Lucida Sans Unicode",Helvetica,Arial,Verdana,sans-serif;
+	padding-bottom:100px;
+	background-color: black;
+}
 	h1 { padding:60px 0 0 40px; }
 	p,form { padding:10px 40px; }
 	a { color:#999; text-decoration:none; }
