disable silly behaviors

--- a/chant/index.html
+++ b/chant/index.html
@@ -1,6 +1,10 @@
 <style>
 
 	button { font-size: 20pt; margin: 10px; }
+	button, p {
+	  -webkit-user-select: none; /* disable selection/Copy of UIWebView */
+	  -webkit-touch-callout: none; /* disable the IOS popup when long-press on a link */
+	}
 	#buttonDiv {
 		/*position: absolute;
 	  bottom: 10%;*/
