--- a/chant/index.html
+++ b/chant/index.html
@@ -1,7 +1,7 @@
 <style>
 
 	button { font-size: 20pt; margin: 10px; }
-	button, p {
+	button, p,#mainWindow {
 	  -webkit-user-select: none; /* disable selection/Copy of UIWebView */
 	  -webkit-touch-callout: none; /* disable the IOS popup when long-press on a link */
 	}
@@ -14,14 +14,33 @@
 		min-width: 200px;
   }
 	#mainWindow {
-
-	}
-	#fill{
 		height:70%;
 		overflow-y: scroll;
+	}
+	.closeButton {
+		float:right;
+	}
+	#fill{
 		padding: 50px 30px 0px 30px;
 		/*color:white;*/
+
+		-webkit-transition: all 1000ms linear;
+	 -moz-transition: all 1000ms linear;
+	 -ms-transition: all 1000ms linear;
+	 -o-transition: all 1000ms linear;
+	 transition: all 1000ms linear;
 	}
+	#fill.close {
+		-moz-opacity: 0;
+    opacity: 0;
+    -moz-transform: scale(0.01) translateY(-100%);
+    -webkit-transform: scale(0.01) translateY(-100%);
+    -o-transform: scale(0.01) translateY(-100%);
+    -ms-transform: scale(0.01) translateY(-100%);
+    transform: scale(0.01) translateY(-100%);
+	}
+
+
 	/* BASIC RESET */
 	ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,body,html,p,blockquote,fieldset,input{margin:0; padding:0;}
 
@@ -118,105 +137,124 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
 
 	<script type="text/javascript">
-
+		function getParameterByName(name) {
+			var match = RegExp('[?&]' + name + '=([^&]*)').exec(window.location.search);
+			return match && decodeURIComponent(match[1].replace(/\+/g, ' '));
+		}
 
 		$(document).ready(function()  {
-			var loopProcessId;
+			var loopProcessId; //global.
 			var attachFastClick = Origami.fastclick;
 			attachFastClick(document.body);
 
-			function loadChant(chantId) {
-				$.get("texts/"+chantId +".txt",function(data){
-				//$.get("texts/4.txt",function(data){
-					var chantLines = data.split("\n");
-					var currentLineNumber = 0;
-					var currentLineArray = chantLines[0].split(" ");
-					var currentWordNumber = 0;
-					var fireNextWord = function() {
-						// END OF LINE CASE
-						//console.log(currentLineArray);
-						//console.log(currentLineNumber);
-						//console.log(currentWordNumber);
-
-						$("#fill").append(currentLineArray[currentWordNumber] + " ");
-						//now scroll down
-						var $d = $('#fill');
-						$d.scrollTop($d.prop("scrollHeight"));
-
-						if(++currentWordNumber >= currentLineArray.length) {
-							if(++currentLineNumber >= chantLines.length) {
-								//it's at end of file
-								return endChant();
-								// could do fun stuff here, like prompt to share (send link to same chant)
-								// (or share text of chant to social media)
-								// Or could show the options screen + next button + set repeat
-
-							}
-							else {
-								//it's end of line, so add a <br> and reset
-								$("#fill").append("<br>");
-								currentLineArray = chantLines[currentLineNumber].split(" ");
-								// handle the case of an empty line
-								while(currentLineArray.length == 1 && (currentLineArray[0] == null || currentLineArray[0].length == 0)){
-									$("#fill").append("<br>");
-									if(typeof chantLines[++currentLineNumber] !== 'undefined') currentLineArray = chantLines[currentLineNumber].split(" ");
-									else return endChant();
-
-									// WARNING -- won't work well if it ends on an empty line!
-									// for now, just avoid doing that in the text file
-								}
-								currentWordNumber = 0;
-							}
-						}
-						//console.log("fill button with "+currentLineArray[currentWordNumber]);
-						$("#currentWordButton").text(currentLineArray[currentWordNumber]);
-					}
-
-					//long press loop.
-					$("#currentWordButton").longclick(100,function() {
-						//keep global ref to the process id so we can kill it later
-						loopProcessId = self.setInterval(fireNextWord, 100);
-					});
-					$("#currentWordButton").bind( "touchend mouseup",function(){
-						if(loopProcessId) window.clearInterval(loopProcessId);
-						else fireNextWord(); //this is the case where we're not looping, and they just tap once.
-						loopProcessId = null;
-					})
-
-					//load first word
-					$("#currentWordButton").text(currentLineArray[0]);
-				});
-			}
-
-			//make the text itself refresh the page
-			$("#fill").click(function(){
-				if(confirm("refresh page?")) location.reload();
-			});
-
-			//pick a random chant
+			//pick a random chant, or use the one that was passed
 			// inherited from directory.js
-			var selectedChant = Directory[Math.floor(Math.random()*Directory.length)];
-			//selectedChant.id = 4; //for test
-			loadChant(selectedChant.id);
+			var passedChantId = getParameterByName("chantId");
+			var selectedChant = passedChantId ? Directory[passedChantId-1]: Directory[Math.floor(Math.random()*Directory.length)];
+
+			$.get("texts/"+selectedChant.id +".txt",function(data){
+				// INIT DATA
+				var chantLines = data.split("\n");
+				var currentLineNumber = 0;
+				var currentLineArray = chantLines[0].split(" ");
+				var currentWordNumber = 0;
+				//load first word
+				$("#currentWordButton").text(currentLineArray[0]);
+
+				var fireNextWord = function() {
+					//add word, and scroll down to the most recently added word
+					$("#fill").append(currentLineArray[currentWordNumber] + " ");
+					var $d = $('#mainWindow');
+					$d.scrollTop($d.prop("scrollHeight"));
+
+					if(++currentWordNumber >= currentLineArray.length) {
+						//it's at end of file
+						if(++currentLineNumber >= chantLines.length) {  return endChant();  }
+						else {
+							//it's end of line, so add a <br> and reset
+							$("#fill").append("<br>");
+							currentLineArray = chantLines[currentLineNumber].split(" ");
+							// handle the case of an empty line
+							while(currentLineArray.length == 1 && (currentLineArray[0] == null || currentLineArray[0].length == 0)){
+								$("#fill").append("<br>");
+								// WARNING -- won't work well if it ends on an empty line!
+								// for now, just avoid doing that in the text file
+								if(typeof chantLines[++currentLineNumber] !== 'undefined') currentLineArray = chantLines[currentLineNumber].split(" ");
+								else return endChant();
+							}
+							currentWordNumber = 0;
+						}
+					}
+					$("#currentWordButton").text(currentLineArray[currentWordNumber]);
+				}
+
+				// ACTION
+				//long press loop.
+				$("#currentWordButton").longclick(100,function() {
+					//keep global ref to the process id so we can kill it later
+					loopProcessId = self.setInterval(fireNextWord, 100);
+				});
+
+				// ACTION
+				// release button -- add word, or end long press loop
+				$("#currentWordButton").bind( "touchend mouseup",function(){
+					if(loopProcessId) window.clearInterval(loopProcessId);
+					else fireNextWord(); //this is the case where we're not looping, and they just tap once.
+					loopProcessId = null;
+				});
+
+				// ACTION
+				//make the text itself refresh the page
+				$("#fill").dblclick(function(){
+					if(confirm("refresh page?")) location.reload();
+				});
+
+
+			});
 
 			function endChant()
 			{
-				window.clearInterval(loopProcessId);
-				$("#currentWordButton").hide().off();
+				window.clearInterval(loopProcessId); //if they were still pressing button, kill it.
+				$("#buttonDiv").empty();
+
+				//first, allow merit dedication
 				$("#buttonDiv").hide();
-				$("#buttonDiv").append( $("<button>").addClass("tempButtons").text("Random").click(function()
-						{
-							location.reload();
-						})
+				// BUTTON -- dedicate merit
+				var dedicate = function(doAnimation){
+					//remove the buttons
+					$("#buttonDiv").empty();
+
+					//fade out the text ("dedication" animation. See CSS for #fill)
+					if(doAnimation){
+						$('#fill').addClass('close');
+						setTimeout(function(){
+								$('#fill').hide();
+						}, 1000);
+					}
+					//wait 2s, and then show buttons again.
+					$("#buttonDiv").hide();
+					// Button -- "next chant"
+					$("#buttonDiv").append( $("<button>").addClass("tempButtons")
+						.text("Next").click(function(){  reloadPage();  }));
+					// Button -- "repeat chant"
+					$("#buttonDiv").append($("<button>").addClass("tempButtons")
+						.text("Repeat").click(function() {  reloadPage(selectedChant.id); }));
+					var delay = doAnimation ? 1500 : 300;
+					$("#buttonDiv").delay(delay).fadeIn(500);
+				}
+				// "x" to close
+				$("#buttonDiv").append( $("<span>").click(function() {dedicate()}).text("x").addClass("closeButton") );
+				// dedicate button.
+				$("#buttonDiv").append(
+					$("<button>").on('click', function() {dedicate(true) }).addClass("tempButtons").text("Dedicate Merit")
 				);
-				$("#buttonDiv").append($("<button>").addClass("tempButtons").text("Repeat").click(function() {
-							//empty the divs, and reset.
-							$("#currentWordButton").show();
-							$("#fill").empty();
-							$(".tempButtons").remove();
-							loadChant(selectedChant.id);
-				}));
 				$("#buttonDiv").delay(500).fadeIn(1300);
+			}
+
+			function reloadPage(chantId)
+			{
+				if(chantId) window.location = "?chantId="+chantId;
+				else window.location ="?";
 			}
 
 		});
