--- a/chant/index.html
+++ b/chant/index.html
@@ -157,7 +157,7 @@
 				// INIT DATA
 				var chantLines = data.split("\n");
 				var currentLineNumber = 0;
-				var currentLineArray = chantLines[0].split(" ");
+				var currentLineArray = chantLines[0].split(/[ \-]+/);
 				var currentWordNumber = 0;
 				//load first word
 				$("#currentWordButton").text(currentLineArray[0]);
@@ -175,13 +175,13 @@
 						else {
 							//it's end of line, so add a <br> and reset
 							$("#fill").append("<br>");
-							currentLineArray = chantLines[currentLineNumber].split(" ");
+							currentLineArray = chantLines[currentLineNumber].split(/[ \-]+/);
 							// handle the case of an empty line
 							while(currentLineArray.length == 1 && (currentLineArray[0] == null || currentLineArray[0].length == 0)){
 								$("#fill").append("<br>");
 								// WARNING -- won't work well if it ends on an empty line!
 								// for now, just avoid doing that in the text file
-								if(typeof chantLines[++currentLineNumber] !== 'undefined') currentLineArray = chantLines[currentLineNumber].split(" ");
+								if(typeof chantLines[++currentLineNumber] !== 'undefined') currentLineArray = chantLines[currentLineNumber].split(/[ \-]+/);
 								else return endChant();
 							}
 							currentWordNumber = 0;
